docs(markdown): ensure markdown component in composite example doesn't overflow
`limel-markdown` with large content would grow lager than its own container.
This would make testing hard sometimes.

--- a/src/components/markdown/examples/markdown-composite.scss
+++ b/src/components/markdown/examples/markdown-composite.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     gap: 1rem;
 
+    * {
+        min-width: 0;
+    }
+
     limel-input-field {
         height: 10rem;
     }
